Fix the dark mode of the documentation home page (#7280)

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -16,10 +16,20 @@
     --vp-c-bg-soft: #fbfbfb;
     --vp-font-family-base: "Space Grotesk", serif;
     --vp-font-family-mono: "Space Mono", serif;
+
+    --vp-c-bg: #ffffff;
+    --vp-c-bg-alt: #f6f6f7;
+    --vp-c-bg-elv: #ffffff;
+    --vp-c-bg-soft: #f6f6f7;
 }
 
 .dark {
     --vp-c-brand-1: #afa2f3;
     --vp-c-brand-2: #2c2250;
     --vp-c-brand-3: #3c315b;
+
+    --vp-c-bg: #1b1b1f;
+    --vp-c-bg-alt: #161618;
+    --vp-c-bg-elv: #202127;
+    --vp-c-bg-soft: #202127;
 }
